# trod

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 2026-03-04-trod-design.md  2026-03-04-trod-implementation.md
src/: cli.rs  db.rs  lib.rs  main.rs  tui.rs
tests/: cli_tests.rs  db_tests.rs
