[package]
name = "trod"
version = "0.3.2"
edition = "2021"
description = "A persistent directory history tool with interactive TUI picker"
license = "MIT"
repository = "https://github.com/YOUR_USER/trod"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
dirs = "5"
anyhow = "1"
fuzzy-matcher = "0.3"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
